<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_homepage"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_rating"
            android:title="@string/rate_us" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_moreapps"
            android:icon="@drawable/ic_moreapps"
            android:title="More Apps" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_email"
            android:title="@string/feedback" />
    </group>

    <item android:title="Privacy">
        <menu>
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/policy"
                android:title="@string/privacy_policy"
                android:visible="true"/>
        </menu>
    </item>

</menu>
